[Add]単体でIMEから入力ができるようにCoreModを追加

--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,15 @@ processResources {
   }
 }
 
+jar {
+  manifest {
+    attributes([
+      "FMLCorePluginContainsFMLMod": true,
+      "FMLCorePlugin": "com.github.taichi3012.controlime.core.ControlIMECorePlugin"
+    ])
+  }
+}
+
 runClient {
   outputs.upToDateWhen { false }
 }
